Fix input mask initialization to target specific form inputs

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       $(document).ready(function () {
         // Inputmask().mask(document.querySelectorAll("input"));
         // or
-        $(":input").inputmask();
+        $("#registrationForm input").inputmask();
 
         // Generic validator method for any inputmask
         $.validator.addMethod(
